attempt to fix zoom on mobile forms

--- a/docs/assets/css/extras.css
+++ b/docs/assets/css/extras.css
@@ -16,25 +16,31 @@ section {
 
 
 .no-pad {
-	padding: 0px !important
+	padding: 0px !important;
 }
 
 .no-margin {
-	margin: 0px !important
+	margin: 0px !important;
 }
 
 .txt-link {
-	text-decoration: underline;
-	font-weight: 900;
-	color: #F67599;
-	-webkit-transition: all .2s;
+	text-decoration: underline !important;
+	font-weight: 900 !important;
+	color: #F67599 !important;
+	-webkit-transition: all .2s !important;
 	/* Safari */
-	transition: all .2s;
+	transition: all .2s !important;
 }
 
 .txt-link:hover {
-	text-decoration: none;
-	opacity: .8;
+	text-decoration: none !important;
+	opacity: .8 !important;
+}
+
+input[type='text'],
+input[type='number'],
+textarea {
+	font-size: 16px !important;
 }
 
 
@@ -111,6 +117,7 @@ div#back-to-top {
 
 
 
+
 /**end scroll to top/
 /*vid player*/
 
@@ -132,6 +139,7 @@ div.youtube:hover div.circle {
 
 
 
+
 /*fix for iphone fonts*/
 
 @media screen and (max-device-width: 480px) {
@@ -139,6 +147,7 @@ div.youtube:hover div.circle {
 		-webkit-text-size-adjust: none;
 	}
 }
+
 
 
 
@@ -161,6 +170,7 @@ a#myHeader1 {
 
 
 
+
 /* end the toggle hide/show css for pre code tags*/
 
 
@@ -170,6 +180,7 @@ a#myHeader1 {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
+
 
 
 
@@ -196,6 +207,7 @@ a i {
 
 
 
+
 /*end icons*/
 
 
@@ -207,6 +219,7 @@ a i {
 	-ms-transition: .9s all;
 	-moz-transition: .9s all;
 }
+
 
 
 
@@ -242,6 +255,7 @@ body {
 	/*padding-top: 51px;*/
 	/*accounts for header*/
 }
+
 
 
 
@@ -290,6 +304,7 @@ a.scroll-to-top {
 
 
 
+
 /*end scroll to top*/
 
 section.row {
@@ -330,6 +345,7 @@ hr {
 
 
 
+
 /*FLEX */
 
 .row-eq-height {
@@ -356,6 +372,7 @@ hr {
 
 
 
+
 /*end FLEX*/
 
 .btn,
@@ -365,6 +382,7 @@ hr {
 	font-family: "museo-sans", sans-serif;
 	font-weight: 700
 }
+
 
 
 
@@ -391,6 +409,7 @@ hr {
 
 
 
+
 /*global VERTICAL ALIGN (the full width banner class is in separate stylesheet) ***needs a height set to work properly*/
 
 .vertical-align {
@@ -401,6 +420,7 @@ hr {
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
+
 
 
 
@@ -441,6 +461,7 @@ hr {
 	display: inline-block;
 	padding: 15px;
 }
+
 
 
 
@@ -629,6 +650,7 @@ hr {
 .btn-inverse.light-danger {
 	border: 1px solid rgba(250, 200, 210, 1);
 }
+
 
 
 
